--- a/Hotella/Views/Hotel/HomePageDisplay.cshtml
+++ b/Hotella/Views/Hotel/HomePageDisplay.cshtml
@@ -9,15 +9,17 @@
     <div class="container">
         <h1>Forget Busy Work, Start Your Next Vacation</h1>
         <p class="lead">Explore the best hotels for your next getaway</p>
-        <a href="#" class="btn btn-light">SHOW ME NOW</a>
+        <a href="@Url.Action("HotelsDisplay", "Hotel")" class="btn btn-light">SHOW ME NOW</a>
+
+
     </div>
 </header>
 
-<!-- Hotels Section -->
+<!-- Most Picked Hotels Section -->
 <section class="container my-5">
-    <h2 class="text-center mb-4">Most Picked Hotels</h2>
+    <h2 class="text-left mb-4">Most Picked</h2>
     <div class="row">
-        @foreach (var hotel in Model.Hotels)
+        @foreach (var hotel in Model.MostPickedHotels)
         {
             <div class="col-md-4 mb-4">
                 <div class="card shadow">
@@ -25,12 +27,79 @@
                     <div class="card-body">
                         <h5 class="card-title">@hotel.Name</h5>
                         <p class="card-text">@hotel.City</p>
-                        <a href="#" class="btn btn-primary">Book Now</a>
+                        <a href="@Url.Action("HotelDetails", "Hotel", new { hotelName = hotel.Name })" class="btn btn-primary">BOOK NOW</a>
+
                     </div>
                 </div>
             </div>
         }
         
+    </div>
+</section>
+
+<!-- Most Picked Hotels Section -->
+<section class="container my-5">
+    <h2 class="text-left mb-4">Houses With Beautiful Backyard</h2>
+    <div class="row">
+        @foreach (var hotel in Model.HotelsWithBackyard)
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card shadow">
+                    <img src="@hotel.ImageUrl" class="card-img-top" alt="@hotel.Name" />
+                    <div class="card-body">
+                        <h5 class="card-title">@hotel.Name</h5>
+                        <p class="card-text">@hotel.City</p>
+                        <a href="@Url.Action("HotelDetails", "Hotel", new { hotelName = hotel.Name })" class="btn btn-primary">BOOK NOW</a>
+
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
+</section>
+
+<!-- Hotels with swimming pool section -->
+<section class="container my-5">
+    <h2 class="text-left mb-4">Hotels with swimming pools</h2>
+    <div class="row">
+        @foreach (var hotel in Model.HotelsWithSwimmingPool)
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card shadow">
+                    <img src="@hotel.ImageUrl" class="card-img-top" alt="@hotel.Name" />
+                    <div class="card-body">
+                        <h5 class="card-title">@hotel.Name</h5>
+                        <p class="card-text">@hotel.City</p>
+                        <a href="@Url.Action("HotelDetails", "Hotel", new { hotelName = hotel.Name })" class="btn btn-primary">BOOK NOW</a>
+
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
+</section>
+
+<!-- Hotels with a kitchen set Section -->
+<section class="container my-5">
+    <h2 class="text-left mb-4">Apartments with kitchen set</h2>
+    <div class="row">
+        @foreach (var hotel in Model.HotelsWithKitchen)
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card shadow">
+                    <img src="@Url.Content(hotel.ImageUrl)" class="card-img-top" alt="@hotel.Name" />
+                    <div class="card-body">
+                        <h5 class="card-title">@hotel.Name</h5>
+                        <p class="card-text">@hotel.City</p>
+                        <a href="@Url.Action("HotelDetails", "Hotel", new { hotelName = hotel.Name })" class="btn btn-primary">BOOK NOW</a>
+
+                    </div>
+                </div>
+            </div>
+        }
+
     </div>
 </section>
 
